hn_tests/opt/failing/euler6-2.hn
hnMain = {
	natr = {
		g x total = 1
		natrec g 0 100
	}
	print (sub natr natr)
}